compiler/tests/fail/stack_allocation/x86-64/res_pointer_not_initial_region.jazz
export fn main (reg ptr u32[1] r) -> reg ptr u32[1] {
  stack u32[1] s;
  s[0] = 0;
  r = s;
  return r;
}
